<resources>
    <string name="app_name">CryptoCurrency</string>
    <string name="global_market_cap">Global Market Cap:%s</string>
    <string name="search_hint">Search Coins…</string>

    <string name="name">Name</string>
    <string name="change">Change</string>
    <string name="price">Price</string>

    <string name="percentage">%s%%</string>
    <string name="prices">Prices</string>
</resources>